# zerok-app

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  FRONTIER_2026.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
WEEKLY_UPDATES/: week1.md  week2.md  week3.md  week4.md
circuits/: README.md  TRUSTED_SETUP.md  package.json  verification_key.json  withdraw.circom
circuits/light_protocol/: data_hash.circom  discriminator_field.circom  light_leaf_hash.circom
circuits/v2/: re_denominate.circom  withdraw.circom
docs/: agents.md
docs-site/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  theme.config.tsx  tsconfig.json
docs-site/pages/: _meta.ts  agents.mdx  deposits.mdx  faq.mdx  getting-started.mdx  how-it-works.mdx  index.mdx  privacy.mdx  withdrawals.mdx
docs-site/public/: llms.txt
docs-site/styles/: globals.css
examples/: agent-private-payment.js
manifests/: mainnet.json
programs/zerok/: README.md
programs/zerok/idl/: zerok.json
programs/zerok_v2/: README.md
programs/zerok_v2/idl/: zerok_v2.json
programs/zerok_v3/: Cargo.toml
programs/zerok_v3/idl/: zerok_v3.json
programs/zerok_v3/src/: commitment_uniqueness_test.rs  constants.rs  final_verification_test.rs  fix_test_imports.sh  hash_parity_test.rs  instructions_cooldown.rs  instructions_debug.rs  instructions_light_withdraw.rs  instructions_root_ring.rs  instructions_root_ring_shard.rs  instructions_v2.rs  instructions_v2_clean.rs  integration_tests.rs  lib.rs  light_state.rs  merkle_tree.rs  merkle_tree_poseidon.rs  mini_poseidon_test.rs  nullifier_pda_test.rs  pda_nullifier.rs  poseidon_hash.rs  poseidon_test.rs  poseidon_test_vectors.rs  records.rs  relayer_security_test.rs  simple_test.rs  state_layout_test.rs  state_root_ring.rs  state_root_ring_shard.rs  state_v2.rs  state_v2_clean.rs  tests.rs  verifying_key.rs  vk_layout.rs
programs/zerok_v3/src/helpers/: field.rs  mod.rs  vk.rs
programs/zerok_v3/src/instructions/: debug_nullifier_old.rs  mod.rs
programs/zerok_v3/src/v2/: mod.rs  poseidon_helpers.rs  verify_withdrawal.rs
relay/: .env.example  README.md  package.json  server.js
scripts/: test-agent-sdk-v3.js
sdk/agent/: README.md  index.js  package.json  recover.js
sdk/mcp/: README.md  package.json  server.js
sdk/v2-core/: constants.js  fee.js  field.js  memo.js  merkle.js  note.js  package.json  planner.js  proof-serialize.js  relay.js  v3-witness.js  witness.js
sdk/v3/: canonical.js  deposit.js  withdraw.js
web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/public/config/: devnet.json  localnet.json  mainnet-beta.json  testnet.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/app/: page.tsx
web/src/app/landing/: layout.tsx  page.tsx
web/src/components/: CustomWalletButton.tsx  DepositCard.tsx  DiagnosticTest.tsx  HowToGuide.tsx  PrivateCard.tsx  ProofOverlay.tsx  RecentNotes.tsx  StatusTab.tsx  V2DepositCard.tsx  V2WithdrawPanel.tsx  V3WithdrawPage.tsx  WithdrawBar.tsx
web/src/components/landing/: FAQ.tsx  FinalCTA.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  Roadmap.tsx  ScrollToTop.tsx  Specs.tsx  Trust.tsx  UseCases.tsx  ValueBlocks.tsx
web/src/components/ui/: Button.tsx  Card.tsx  Counter.tsx  HealthBar.tsx  Modal.tsx  ProgressBar.tsx  Toggle.tsx  index.ts
web/src/contexts/: PoolContext.tsx
web/src/lib/: compute-budget.ts  config-loader.ts  confirmation-limiter.ts  daemon-client.ts  deposit-event.ts  deposit-session.ts  http-confirmation.ts  network-config.ts  note-cache.ts  note-encryption.ts  note-export.ts  note-recovery.ts  note-storage.ts  on-chain-status.ts  pool-config.ts  protocol-client.ts  protocol-constants.ts  reconcile.ts  relayer-client.ts  resilient-connection.ts  ring-check.ts  root-acceptance.ts  rpc-diagnostics.ts  rpc-limiter.ts  v2-config.ts  v2-send.ts  v2-withdrawal.ts  v3-withdraw.ts  withdrawal.ts  ws-confirmation.ts  ws-connection.ts
web/src/lib/sdk/: index.ts  poseidon.ts  serialization.ts  witness.ts
web/src/types/: note.ts  v2-core.d.ts
